# wildberries-parser

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py  test2.py
app/: Dockerfile  catalog_fetcher.py  config.py  data_fetcher.py  data_parser.py  data_processor.py  get_urls.py  logging_config.py  main.py  notification.py  page_params.py  parser.py  urls.txt
telegram_bot/: Dockerfile  app.py
telegram_bot/handlers/: user_private.py
tests/: test_data_processor.py  test_logging_config.py
