[tool.poetry]
name = "parser-wildberries"
version = "0.1.0"
description = ""
authors = ["Andrey Melchikov <andrei.melchikov25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.main.dependencies]
requests = "^2.32.3"
aiohttp = "^3.10.10"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
schedule = "^1.2.2"

[tool.poetry.group.telegram.dependencies]
python-dotenv = "^1.0.1"
aiogram = "^3.13.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
black = "^24.10.0"
pytest = "^8.3.3"
pre-commit = "^4.0.1"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
